fix: Configuration CORS pour autoriser Railway et Swagger UI